--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular": "latest",
     "jquery": "^2.2.2",
     "angular-ui-router": "^0.2.18",
-    "angular-animate": "^1.5.5"
+    "angular-animate": "^1.5.5",
+    "typed.js": "^1.1.1"
   }
 }
